[package]
name = "capra-singleplanner"
version = "0.1.0"
authors = ["Anson <git@anson-cheung.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.48"
time = "0.2.9"
serde = {version = "1.0.104", features = ["derive"]}
capra = {path="../capra"}

[profile.release]
opt-level = 3
lto = "on"